rss-bridge/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: rss-bridge
  name: rss-bridge
spec:
  rules:
  - host: rss-bridge.pi-k8s.shuuji3.xyz
    http:
      paths:
      - backend:
          service:
            name: rss-bridge
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - rss-bridge.pi-k8s.shuuji3.xyz
    secretName: rss-bridge-pi-k8s-shuuji3-xyz-tls
status:
  loadBalancer:
    ingress:
    - ip: 192.168.11.200
